--- a/css/estilo.css
+++ b/css/estilo.css
@@ -15,6 +15,12 @@ body {
   background-color: white;
   padding-bottom: 20px; }
 
+p {
+  font-size: 20px; }
+
+.ig {
+  color: #bc00eb; }
+
 /*centrar elementos*/
 .center {
   display: flex;
