--- a/scss/general.scss
+++ b/scss/general.scss
@@ -19,3 +19,11 @@ body {
     background-color: white;
     padding-bottom: 20px;
 }
+
+p{
+    font-size: 20px;
+}
+
+.ig{
+    color: rgb(188, 0, 235);
+}
